[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project]
name = "spawn-user-agent"
version = "0.0.4"
dependencies = []
requires-python = ">=3.9"
authors = [{name = "Fastily", email = "fastily@users.noreply.github.com"}]
description = "Super simple user agent generator"
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICEN[CS]E.*"]
keywords = ["user-agent"]
classifiers = [
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/fastily/spawn-user-agent"
"Bug Tracker" = "https://github.com/fastily/spawn-user-agent/issues"

[tool.uv.build-backend]
module-name = "spawn_user_agent"
module-root = ""
